# atelier_2_blockchain

./: how_to.txt
atelier2-part1/: CMakeLists.txt  Makefile  create_import_libs.bat  main.cpp  run_executable.bat  run_executable.ps1
atelier2-part1/build-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Atelier2.sln  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  atelier2_part1.vcxproj  atelier2_part1.vcxproj.filters  cmake_install.cmake
atelier2-part1/build-vs/atelier2_part1.dir/Release/: atelier2_part1.exe.recipe
atelier2-part1/build-vs/atelier2_part1.dir/Release/atelier2_part1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
atelier2-part1/build-vs/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
atelier2-part1/build-vs/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
atelier2-part1/build-vs/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
atelier2-part1/build-vs/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
